unpackaged/main/default/objects/Contract_SKU_Transaction__c/Contract_SKU_Transaction__c.object-meta.xml
<CustomObject>
    <description>Listing of all transactions against the contract sku</description>
    <label>Contract SKU Transaction</label>
    <nameField>
        <displayFormat>CSKUT-{000000}</displayFormat>
        <label>Contract SKU Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract SKU Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>