unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Change_in_ARR__c.field-meta.xml
<CustomField>
    <fullName>Change_in_ARR__c</fullName>
    <formula>Quantity__c * Contract_SKU__r.Unit_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change in ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>