unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Change_in_Commissioned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Commissioned_ARR__c</fullName>
    <formula>Contract_SKU__r.Unit_Commissioned_ARR__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change in Commissioned ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>