unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <formula>Contract_SKU__r.Subscription_Contract__r.Effective_Date__c</formula>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>