unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Contract_SKU__c.field-meta.xml
<CustomField>
    <fullName>Contract_SKU__c</fullName>
    <label>Contract SKU</label>
    <referenceTo>Contract_SKU__c</referenceTo>
    <relationshipName>Contract_SKU_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>