unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Effective_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_2__c</fullName>
    <formula>Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date (2)</label>
    <type>Date</type>
</CustomField>