unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Historical_Upload__c.field-meta.xml
<CustomField>
    <fullName>Historical_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To note transaction was part of migration</description>
    <label>Historical Upload</label>
    <type>Checkbox</type>
</CustomField>