unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/History_Type__c.field-meta.xml
<CustomField>
    <fullName>History_Type__c</fullName>
    <label>History Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>