unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <formula>IF(ISBLANK(Contract_SKU__r.Original_Opportunity_SKU__c),
Contract_SKU__r.Opportunity_SKU__r.Opportunity__r.CloseDate,
Contract_SKU__r.Original_Opportunity_SKU__r.Opportunity__r.CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>