unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Type__c</fullName>
    <label>Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>