unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Under_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Under_6_Months__c</fullName>
    <description>This is used to calculate commissions. Other date math formulas were not used since they cannot handle partial months.</description>
    <formula>IF(
    TEXT(Contract_SKU__r.SKU_Product__r.Product_Type__c) = &quot;Add-On&quot;,
    ADDMONTHS(Contract_Effective_Date__c, 6) &gt;= Effective_Date__c,
    IF(
        ISNULL(Opportunity_Close_Date__c),TRUE,
       IF( ADDMONTHS(Opportunity_Close_Date__c, 6) &gt;= Effective_Date__c,
        TRUE,
        FALSE)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compared with the Subscription Contract&#39;s Effective Date.</inlineHelpText>
    <label>Under 6 Months?</label>
    <type>Checkbox</type>
</CustomField>