unpackaged/main/default/objects/Contract_SKU_Transaction__c/fields/Woodpecker_ID__c.field-meta.xml
<CustomField>
    <fullName>Woodpecker_ID__c</fullName>
    <externalId>true</externalId>
    <label>Woodpecker ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>